--- a/tic-tac-cattle-toe/package.json
+++ b/tic-tac-cattle-toe/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@heroui/tooltip": "^2.2.24",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
