--- a/tic-tac-cattle-toe/package.json
+++ b/tic-tac-cattle-toe/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@heroui/tooltip": "^2.2.24",
+    "@tanstack/react-query": "^5.90.7",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
