--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "@types/jest": "^30.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0"
+  },
+  "dependencies": {
+    "react-icons": "^5.5.0"
   }
 }
