--- a/tic-tac-cattle-toe/package.json
+++ b/tic-tac-cattle-toe/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@heroui/dropdown": "^2.3.27",
     "@heroui/tooltip": "^2.2.24",
     "@tanstack/react-query": "^5.90.7",
     "@tanstack/react-query-devtools": "^5.90.2",
