--- a/tic-tac-cattle-toe/package.json
+++ b/tic-tac-cattle-toe/package.json
@@ -17,7 +17,8 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
